--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ problem2
 
 # Other file that should not end up in a repo.
 *.swp
+token.txt
 # Copied from https://gist.github.com/octocat/9257657
 
 # Compiled source #
