fix for pytest.yml

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,5 +28,6 @@ jobs:
     - name: Test with pytest
       run: |
         coverage run -m pytest
+    - name: View code coverage
+      run: |
         coverage report --include==$(echo $PWD)/*
-        
