fix for pytest.yml

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,4 +30,4 @@ jobs:
         coverage run -m pytest
     - name: View code coverage
       run: |
-        coverage report --include==$(echo $PWD)/*
+        coverage report
