--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,7 +27,7 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        coverage run -m pytest
+        coverage run -m pytest -Wignore
     - name: View code coverage
       run: |
         coverage report
