--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,4 +30,4 @@ jobs:
         coverage run -m pytest -Wignore
     - name: View code coverage
       run: |
-        coverage report
+        coverage report -m
