--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,22 +15,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - shell: bash
-      env:
-          BRAWLKEY: ${{ secrets.BRAWLHALLAKEY }}
-      run: |
-        touch resources/brawlhallaKey.txt
-        echo "$BRAWLKEY" > resources/brawlhallaKey.txt
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
     - name: Install dependencies
+      env:
+        BRAWLKEY: ${{ secrets.BRAWLHALLAKEY }}
       run: |
         python -m pip install --upgrade pip
         pip install pytest
         pip install -r resources/requirements.txt
+        touch "resources/brawlhallaKey.txt"
+        echo "$BRAWLKEY" > "resources/brawlhallaKey.txt"
     - name: Test with pytest
       run: |
         coverage run -m pytest -Wignore
