--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,7 +1,6 @@
-# This workflow will install Python dependencies and run tests with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# Installs dependencies, runs tests with pytest, and reports code coverage.
 
-name: Python application
+name: Beardless Bot
 
 on:
   push:
@@ -21,13 +20,13 @@ jobs:
       with:
         python-version: 3.9
     - name: Install dependencies
+      shell: bash
       env:
         BRAWLKEY: ${{ secrets.BRAWLHALLAKEY }}
       run: |
         python -m pip install --upgrade pip
         pip install pytest
         pip install -r resources/requirements.txt
-        touch "resources/brawlhallaKey.txt"
         echo "$BRAWLKEY" > "resources/brawlhallaKey.txt"
     - name: Test with pytest
       run: |
