--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,10 @@
 # Installs dependencies, runs tests with pytest, and reports code coverage.
 
-name: Beardless Bot
+name: Beardless Bot Unit Tests
+
+defaults:
+  run:
+    shell: bash
 
 on:
   push:
@@ -20,13 +24,13 @@ jobs:
       with:
         python-version: 3.9
     - name: Install dependencies
-      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r resources/requirements.txt
+    - name: Get Brawl API key
       env:
         BRAWLKEY: ${{ secrets.BRAWLHALLAKEY }}
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install -r resources/requirements.txt
         echo "$BRAWLKEY" > "resources/brawlhallaKey.txt"
     - name: Test with pytest
       run: |
