--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,6 +2,8 @@
 
 name: Beardless Bot Unit Tests
 
+
+
 defaults:
   run:
     shell: bash
@@ -16,7 +18,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -27,12 +28,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r resources/requirements.txt
-    - name: Get Brawl API key
-      env:
-        BRAWLKEY: ${{ secrets.BRAWLHALLAKEY }}
-      run: |
-        echo "$BRAWLKEY" > "resources/brawlhallaKey.txt"
     - name: Test with pytest
+      env:
+        BRAWLKEY: ${{ secrets.BRAWLKEY }}
       run: |
         coverage run -m pytest -Wignore
     - name: View code coverage
