--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -3,7 +3,8 @@ coverage==6.4.3
 flake8==4.0.1
 genbadge[all]==1.1.1
 nextcord==2.6.0
-pytest==7.1.2
+pytest==8.2.0
+pytest-asyncio==0.23.6
 python-dotenv==0.19.2
 requests==2.28.1
 steam==1.2.0
