--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,10 +1,10 @@
-bs4==0.0.1
-coverage==6.4.3
-flake8==4.0.1
+beautifulsoup4==4.12.3
+coverage==7.6.0
+flake8==7.1.0
 genbadge[all]==1.1.1
 nextcord==2.6.0
-pytest==8.2.0
-pytest-asyncio==0.23.6
-python-dotenv==0.19.2
-requests==2.28.1
-steam==1.2.0
+pytest==8.2.2
+pytest-asyncio==0.23.7
+python-dotenv==1.0.1
+requests==2.32.3
+steam==1.4.4
