--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,11 +1,14 @@
 beautifulsoup4==4.12.3
-coverage==7.6.0
-flake8==7.1.0
+coverage==7.6.1
+docstr-coverage==2.3.2
+flake8==7.1.1
 genbadge[all]==1.1.1
+mypy[reports]==1.11.1
 nextcord==2.6.0
-pytest==8.2.2
-pytest-asyncio==0.23.7
+pytest==8.3.2
+pytest-asyncio==0.23.8
 python-dotenv==1.0.1
 requests==2.32.3
 steam==1.4.4
-docstr-coverage==2.3.2
+types-beautifulsoup4==4.12.0.20240511
+types-requests==2.32.0.20240712 
