Greatly expanded unit tests, typing, code quality

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ testResults.md
 coverage.xml
 htmlcov/*
 resources/logs/*
+env/
 venv/
-*.kdev4*
+*.kdev4
 junit.xml
+.mypy_cache/*
+.pytest_cache/*
+include/*
+bandit.txt
