--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,14 +1,20 @@
+aiofiles==24.1.0
+bandit==1.7.9
 beautifulsoup4==4.12.3
 coverage==7.6.1
 docstr-coverage==2.3.2
 flake8==7.1.1
+flake8-isort==6.1.1
 genbadge[all]==1.1.1
 mypy[reports]==1.11.1
 nextcord==2.6.0
 pytest==8.3.2
 pytest-asyncio==0.23.8
 python-dotenv==1.0.1
+pytest-github-actions-annotate-failures==0.2.0
 requests==2.32.3
+responses==0.25.3
 steam==1.4.4
+types-aiofiles==24.1.0.20240626
 types-beautifulsoup4==4.12.0.20240511
-types-requests==2.32.0.20240712 
+types-requests==2.32.0.20240712
