--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -4,14 +4,17 @@ beautifulsoup4==4.12.3
 coverage==7.6.1
 docstr-coverage==2.3.2
 flake8==7.1.1
+flake8-bugbear==24.8.19
 flake8-isort==6.1.1
 genbadge[all]==1.1.1
-mypy[reports]==1.11.1
+httpx==0.27.2
+mypy[reports]==1.11.2
 nextcord==2.6.0
 pytest==8.3.2
-pytest-asyncio==0.23.8
+pytest-asyncio==0.24.0
 python-dotenv==1.0.1
 pytest-github-actions-annotate-failures==0.2.0
+pytest_httpx==0.30.0
 requests==2.32.3
 responses==0.25.3
 steam==1.4.4
