--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,10 +1,14 @@
 aiofiles==24.1.0
+aiohttp==3.10.5
 bandit==1.7.9
 beautifulsoup4==4.12.3
 coverage==7.6.1
 docstr-coverage==2.3.2
 flake8==7.1.1
 flake8-bugbear==24.8.19
+flake8-builtins==2.5.0
+flake8-class-attributes-order==0.1.3
+flake8-comprehensions==3.15.0
 flake8-isort==6.1.1
 genbadge[all]==1.1.1
 httpx==0.27.2
@@ -12,12 +16,12 @@ mypy[reports]==1.11.2
 nextcord==2.6.0
 pytest==8.3.2
 pytest-asyncio==0.24.0
-python-dotenv==1.0.1
 pytest-github-actions-annotate-failures==0.2.0
 pytest_httpx==0.30.0
+python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
 steam==1.4.4
 types-aiofiles==24.1.0.20240626
-types-beautifulsoup4==4.12.0.20240511
-types-requests==2.32.0.20240712
+types-beautifulsoup4==4.12.0.20240907
+types-requests==2.32.0.20240907
