--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==24.1.0
 aiohttp==3.10.5
 bandit==1.7.9
 beautifulsoup4==4.12.3
+codespell==2.3.0
 coverage==7.6.1
 docstr-coverage==2.3.2
 flake8==7.1.1
@@ -14,14 +15,14 @@ genbadge[all]==1.1.1
 httpx==0.27.2
 mypy[reports]==1.11.2
 nextcord==2.6.0
-pytest==8.3.2
+pytest==8.3.3
 pytest-asyncio==0.24.0
 pytest-github-actions-annotate-failures==0.2.0
-pytest_httpx==0.30.0
+pytest_httpx==0.31.0
 python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
 steam==1.4.4
 types-aiofiles==24.1.0.20240626
 types-beautifulsoup4==4.12.0.20240907
-types-requests==2.32.0.20240907
+types-requests==2.32.0.20240914
