--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,6 +1,6 @@
 aiofiles==24.1.0
-aiohttp==3.10.5
-bandit==1.7.9
+aiohttp==3.10.8
+bandit==1.7.10
 beautifulsoup4==4.12.3
 codespell==2.3.0
 coverage==7.6.1
@@ -11,6 +11,7 @@ flake8-builtins==2.5.0
 flake8-class-attributes-order==0.1.3
 flake8-comprehensions==3.15.0
 flake8-isort==6.1.1
+flake8-simplify==0.21.0
 genbadge[all]==1.1.1
 httpx==0.27.2
 mypy[reports]==1.11.2
@@ -18,7 +19,7 @@ nextcord==2.6.0
 pytest==8.3.3
 pytest-asyncio==0.24.0
 pytest-github-actions-annotate-failures==0.2.0
-pytest_httpx==0.31.0
+pytest_httpx==0.32.0
 python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
