--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,16 +1,13 @@
 aiofiles==24.1.0
-aiohttp==3.10.8
-bandit==1.7.10
+aiohttp==3.10.10
 beautifulsoup4==4.12.3
 codespell==2.3.0
-coverage==7.6.1
+coverage==7.6.2
 docstr-coverage==2.3.2
 flake8==7.1.1
 flake8-bugbear==24.8.19
 flake8-builtins==2.5.0
-flake8-class-attributes-order==0.1.3
 flake8-comprehensions==3.15.0
-flake8-isort==6.1.1
 flake8-simplify==0.21.0
 genbadge[all]==1.1.1
 httpx==0.27.2
@@ -23,6 +20,7 @@ pytest_httpx==0.32.0
 python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
+ruff==0.6.9
 steam==1.4.4
 types-aiofiles==24.1.0.20240626
 types-beautifulsoup4==4.12.0.20240907
