--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -2,7 +2,7 @@ aiofiles==24.1.0
 aiohttp==3.10.10
 beautifulsoup4==4.12.3
 codespell==2.3.0
-coverage==7.6.3
+coverage==7.6.4
 docstr-coverage==2.3.2
 flake8==7.1.1
 flake8-bugbear==24.8.19
@@ -11,7 +11,7 @@ flake8-comprehensions==3.15.0
 flake8-simplify==0.21.0
 genbadge[all]==1.1.1
 httpx==0.27.2
-mypy[reports]==1.12.0
+mypy[faster-cache, reports]==1.13.0
 nextcord==2.6.0
 pytest==8.3.3
 pytest-asyncio==0.24.0
@@ -20,8 +20,8 @@ pytest_httpx==0.32.0
 python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
-ruff==0.7.0
+ruff==0.7.1
 steam==1.4.4
 types-aiofiles==24.1.0.20240626
-types-beautifulsoup4==4.12.0.20240907
+types-beautifulsoup4==4.12.0.20241020
 types-requests==2.32.0.20241016
