--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.12.0", "3.12.3", "3.12.6" ]
+        python-version: [ "3.12.0", "3.12.3", "3.12.6", "3.13.0 "]
     name: Beardless Bot Python ${{ matrix.python-version }} unit tests
     steps:
       - name: Enable Brawl tests on latest Python only
