--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==24.1.0
 aiohttp==3.10.10
+audioop-lts==0.2.1; python_version>="3.13"
 beautifulsoup4==4.12.3
 codespell==2.3.0
 coverage==7.6.4
@@ -14,11 +15,11 @@ nextcord==2.6.0
 pytest==8.3.3
 pytest-asyncio==0.24.0
 pytest-github-actions-annotate-failures==0.2.0
-pytest_httpx==0.32.0
+pytest-httpx==0.33.0
 python-dotenv==1.0.1
 requests==2.32.3
 responses==0.25.3
-ruff==0.7.1
+ruff==0.7.3
 steam==1.4.4
 types-aiofiles==24.1.0.20240626
 types-beautifulsoup4==4.12.0.20241020
