--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -10,7 +10,7 @@ flake8-comprehensions==3.17.0
 genbadge[all]==1.1.2
 httpx==0.28.1
 mypy[faster-cache, reports]==1.18.2
-nextcord==2.6.0
+nextcord==3.1.1
 pytest==8.4.2
 pytest-asyncio==1.2.0
 pytest-github-actions-annotate-failures==0.3.0
@@ -22,3 +22,4 @@ steam==1.4.4
 types-aiofiles==24.1.0.20250822
 types-beautifulsoup4==4.12.0.20250516
 types-requests==2.32.4.20250913
+types-flake8==7.3.0.20250622
