--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==24.1.0
-aiohttp==3.12.15
+aiohttp==3.13.0
 audioop-lts==0.2.2; python_version>="3.13"
 beautifulsoup4==4.14.2
 codespell==2.4.1
@@ -10,15 +10,16 @@ flake8-comprehensions==3.17.0
 genbadge[all]==1.1.2
 httpx==0.28.1
 mypy[faster-cache, reports]==1.18.2
-nextcord==2.6.0
+nextcord==3.1.1
 pytest==8.4.2
 pytest-asyncio==1.2.0
 pytest-github-actions-annotate-failures==0.3.0
 pytest-httpx==0.35.0
 python-dotenv==1.1.1
 requests==2.32.5
-ruff==0.13.3
+ruff==0.14.0
 steam==1.4.4
 types-aiofiles==24.1.0.20250822
 types-beautifulsoup4==4.12.0.20250516
 types-requests==2.32.4.20250913
+types-flake8==7.3.0.20250622
