--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -1,24 +1,25 @@
 aiofiles==25.1.0
-aiohttp==3.13.1
+aiohttp==3.13.2
 audioop-lts==0.2.2; python_version>="3.13"
-beautifulsoup4==4.14.2
+beautifulsoup4==4.14.3
 codespell==2.4.1
-coverage==7.11.0
+coverage==7.12.0
 docstr-coverage==2.3.2
 flake8==7.3.0
 flake8-comprehensions==3.17.0
-genbadge[all]==1.1.2
+genbadge[all]==1.1.3
 httpx==0.28.1
-mypy[faster-cache, reports]==1.18.2
+mypy[faster-cache, reports]==1.19.0
 mypy-extensions==1.1.0
 nextcord==3.1.1
-pytest==8.4.2
-pytest-asyncio==1.2.0
+pytest==9.0.1
+pytest-asyncio==1.3.0
 pytest-github-actions-annotate-failures==0.3.0
-pytest-httpx==0.35.0
-python-dotenv==1.1.1
+pytest-httpx==0.36.0
+pytest-rerunfailures==16.1
+python-dotenv==1.2.1
 requests==2.32.5
-ruff==0.14.2
+ruff==0.14.8
 steam==1.4.4
 types-aiofiles==25.1.0.20251011
 types-beautifulsoup4==4.12.0.20250516
